--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Limejuic — Web & AI Solutions Agency</title>
-    <meta name="description" content="Limejuic builds modern websites, mobile apps, and AI automation — fast, scalable, and beautifully designed." />
+    <meta name="description" content="Limejuic builds modern websites, SAAS, mobile apps, and AI automation — fast, scalable, and beautifully designed." />
     <meta name="author" content="Limejuic" />
 
     <link rel="canonical" href="https://limejuic.com/" />
